setup of the challenge

--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
   <body>
     <div id="root"></div>
     <h1>n altro titolo</h1>
-    <p>porcoddio
+    <p>porcoddue
       <br>
-      e la madonna
+      e tre
     </p>
   </body>
 </html>
