implemented react components

--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,12 @@
     />
     <link rel="stylesheet" type="text/css" href="style/stylesheet.css">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     <title>React blog</title>
   </head>
   <body>
     <div id="root"></div>
-    <h1>n altro titolo</h1>
-    <p>porcoddue
-      <br>
-      e tre
-    </p>
   </body>
 </html>
